Bug 432437 - Show all main-menu links on small screen (mobile)

--- a/themes/solstice/app/stylesheets/template/menu.less
+++ b/themes/solstice/app/stylesheets/template/menu.less
@@ -96,6 +96,17 @@
             background-color:@eclipse-orange;
           }
         }
+        .dropdown-menu {
+          background:#2a2a2c;
+          padding:0;
+          > li > a{
+            padding: 5px 20px 5px 30px;
+	          color:#fff;
+	          &:hover{
+	            color:#2c2255;
+	          }
+	        }
+        }
       }
     }
 	}
